--- a/simple responsive/collage.html
+++ b/simple responsive/collage.html
@@ -1,19 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Picture collage</title>
     <style>
-        img{
+        img {
             width: 100%;
             height: 100%;
         }
-        .row{
+
+        .row {
             height: 300px;
+            display: flex;
+            gap: 10px;
+        }
+        .vertical img{
+            height: calc(( 100% - 5px )/2);
+        }
+        .row > div{
+            flex: 1;
+        }
+        .square{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @media screen and (max-width:576px){
+            .row{
+                flex-direction: column;
+                height: auto;
+            }
+            .square{
+                grid-template-columns: 1fr;
+            }
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>my picture collage</h1>
@@ -23,8 +48,35 @@
             <div class="row">
                 <img src="images/tiger.jpg" alt="">
             </div>
+            <div class="row">
+                <div>
+                <img src="images/webp.jpg" alt="">
+                </div>
+                <div>
+                    <img src="images/tiger.jpg" alt="">
+                </div>
+                <div class="vertical">
+                    <img src="images/tiger.jpg" alt="">
+                    <img src="images/webp.jpg" alt="">
+                </div>
+            </div>
+            <div class="row">
+                <div>
+                    <img src="images/tiger.jpg" alt="">
+                </div>
+                <div class="square">
+                    <img src="images/webp.jpg" alt="">
+                    <img src="images/webp.jpg" alt="">
+                    <img src="images/webp.jpg" alt="">
+                    <img src="images/webp.jpg" alt="">
+                </div>
+                <div>
+                    <img src="images/tiger.jpg" alt="">
+                </div>
+            </div>
         </section>
     </main>
-    
+
 </body>
+
 </html>
